--- a/src/componentes/body/card.css
+++ b/src/componentes/body/card.css
@@ -1,74 +1,89 @@
-/* ---------------productos------------ */
-
 .divCards {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 50px;
-
     padding: 20px;
     margin: 20px;
-}
-
-
-.listProduct .item img{
+  }
+  
+  @media (max-width: 1200px) {
+    .divCards {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+  
+  @media (max-width: 992px) {
+    .divCards {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  
+  @media (max-width: 768px) {
+    .divCards {
+      grid-template-columns: 1fr;
+    }
+  }
+  
+  .listProduct .item img {
     width: 100%;
     filter: drop-shadow(0 50px 20px #0009);
     border-radius: 20px;
-}
-.top{
+  }
+  
+  .top {
     margin-top: 50px;
-}
-
-.listProduct .item{
+  }
+  
+  .listProduct .item {
     background-color: #eeeee6;
     padding: 20px;
     border-radius: 20px;
     align-items: center;
     text-align: center;
-    
-}
-.listProduct .item h2{
+  }
+  
+  .listProduct .item h2 {
     font-weight: 500;
     font-size: large;
-}
-.listProduct .item h6{
+  }
+  
+  .listProduct .item h6 {
     letter-spacing: 7px;
     font-size: small;
-}
-.listProduct .item .addCart,
-.listProduct .item .Show,
-.listProduct .item .btnVA {
-    padding: 5px 10px;  /* Mismo padding */
-    border-radius: 20px;  /* Mismo borde redondeado */
-    border: none;  /* Sin bordes */
-    cursor: pointer;  /* Cursor de puntero */
-    color: #eee;  /* Mismo color de texto */
-    display: inline-flex;  /* Alineación consistente */
-    justify-content: center;  /* Centrar horizontalmente */
-    align-items: center;  /* Centrar verticalmente */
-}
-
-.listProduct .item .addCart {
-    background-color: #353432;  /* Color original */
-    margin-right: 15px;  /* Agregar espacio a la derecha */
-}
-
-.listProduct .item .Show {
-    background-color: #555;  /* Color original */
-    margin-right: 15px;  /* Espacio a la derecha */
-}
-
-.listProduct .item .btnVA {
+  }
+  
+  .listProduct .item .addCart,
+  .listProduct .item .Show,
+  .listProduct .item .btnVA {
+    padding: 5px 10px;  
+    border-radius: 20px;  
+    border: none;  
+    cursor: pointer;  
+    color: #eee;  
+    display: inline-flex;  
+    justify-content: center;  
+    align-items: center;  
+  }
+  
+  .listProduct .item .addCart {
+    background-color: #353432;  
+    margin-right: 15px;  
+  }
+  
+  .listProduct .item .Show {
+    background-color: #555;  
+    margin-right: 15px;  
+  }
+  
+  .listProduct .item .btnVA {
     justify-content: space-evenly;
-}
-
-
-
+  }
+  
 
 
 /* --------------------------------CARRITO--------------------------------------- */
 /* [---------------------tabla------------------------] */
-.cartTab{
+.cartTab {
     width: 400px;
     background-color: #353432;
     color: #eee;
@@ -78,61 +93,62 @@
     display: grid;
     grid-template-rows: 70px 1fr 70px;
     transition: 0.5s;
-}
-.showCart .cartTab{
+  }
+  
+  .showCart .cartTab {
     inset: 0 0 0 auto;
-}
-.showCart .container{
+  }
+  
+  .showCart .container {
     transform: translateX(-250px);
-}
-.cartTab h1{
+  }
+  
+  .cartTab h1 {
     padding: 20px;
     margin: 0;
     font-weight: 300;
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-.cartTab p{
+  }
+  
+  .cartTab p {
     text-align: center;
-    display: flex;  /* Usamos flex para centrar verticalmente */
-    align-items: center;  /* Centra verticalmente */
-    justify-content: center;  /* Centra horizontalmente */
-    height: 100%;  /* Se asegura de ocupar toda la altura del espacio */    
-    
-}
-.cartTab .btn{
+    display: flex;  
+    align-items: center;  
+    justify-content: center;  
+    height: 100%;    
+  }
+  
+  .cartTab .btn {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-}
-.cartTab .btn button{
+  }
+  
+  .cartTab .btn button {
     background-color: #E8BC0E;
     border: none;
     font-family: Poppins;
     font-weight: 500;
     cursor: pointer;
-}
-.cartTab .btn .close{
+  }
+  
+  .cartTab .btn .close {
     background-color: #eee;
-}
-
-
-
-/* [---------------------contenido/item------------------] */
-
-
-
-.cartTab .listCart .item img{
+  }
+  
+  .cartTab .listCart .item img {
     width: 100%;
-}
-.cartTab .listCart .item{
-display: grid;
-grid-template-columns: 70px 150px 50px 1fr;
-gap: 10px;
-text-align: center;
-align-items: center;
-}
-
-.listCart .quantity span{
+  }
+  
+  .cartTab .listCart .item {
+    display: grid;
+    grid-template-columns: 70px 150px 50px 1fr;
+    gap: 10px;
+    text-align: center;
+    align-items: center;
+  }
+  
+  .listCart .quantity span {
     display: inline-block;
     width: 25px;
     height: 25px;
@@ -141,18 +157,23 @@ align-items: center;
     border-radius: 50%;
     cursor: pointer;
     align-items: center;
-}
-.quantity span:nth-child(2){
+  }
+  
+  .quantity span:nth-child(2) {
     background-color: transparent;
     color: #eee;
-}
-.item:nth-child(even){
+  }
+  
+  .item:nth-child(even) {
     background-color: #eee1;
-}
-.listCart{
+  }
+  
+  .listCart {
     overflow-y: auto;
-padding-bottom: 70px;
-}
-.listCart::-webkit-scrollbar{
+    padding-bottom: 70px;
+  }
+  
+  .listCart::-webkit-scrollbar {
     width: 0;
-}
+  }
+  
